--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   postgres:
     image: postgres:16
@@ -20,3 +22,6 @@ services:
       - "3000:3000"
     depends_on:
       - postgres
+
+volumes:
+  pg_data:
