--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   postgres:
     image: postgres:16
@@ -22,6 +20,8 @@ services:
       - "3000:3000"
     depends_on:
       - postgres
+    env_file:
+      - .env
 
 volumes:
   pg_data:
